--- a/package.json
+++ b/package.json
@@ -10,9 +10,9 @@
   },
   "dependencies": {
     "framer-motion": "^11.11.17",
-    "next": "15.0.3",
-    "react": "19.0.0",
-    "react-dom": "19.0.0"
+    "react": "^18",
+    "react-dom": "^18",
+    "next": "14.2.6"
   },
   "devDependencies": {
     "@types/node": "^20",
